Use Java 16